# ExecutionEngine

./: .env  .gitignore  COMPLETE_SETUP_GUIDE.md  Cash Futures Thv.xlsx  GITHUB_READY_CHECKLIST.md  LICENSE  ProjectNotes.txt  QUICK_START.bat  README.md  README_SIMPLE.md  START_APPLICATION.bat  START_APPLICATION_PYTHON.bat  dash_zerodha.py  dash_zerodha1.py  docker-compose.yml  implementation_roadmap.md  options_chain_ui.py  package-lock.json  package.json  project.txt  requirements.txt  technical_specification.md
Correlations/: Dash_corr.py  NSEminutebyminute.py  README.md  USAoptions.py  plot_corr.py
Ideas/: UserInterface.md
SharedContent/: Corelartion Algo.docx
backend/: .env  CMakeLists.txt  Dockerfile  package-lock.json  package.json  server.js
backend/include/: pricing_engine.h  zerodha_connector.h
backend/src/: main.cpp  pricing_engine.cpp
backend_cpp/: CMakeLists.txt  CMakeLists_simple.txt  README.md  build.bat  build_simple.bat  config.json  main.cpp  main_simple.cpp  run.bat
backend_python/: main.py  main_simple.py  requirements.txt  requirements_simple.txt
database/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  App.vue  index.css  index.tsx  main.ts
frontend/src/components/: ConfigurationPanel.tsx  OptionsChain.vue  PricingComparison.vue  TradingDashboard.vue  TradingGrid.tsx
frontend/src/store/: basketsSlice.ts  configSlice.ts  marketDataSlice.ts  store.ts
frontend/src/types/: trading.ts
frontend/src/utils/: WebSocketManager.ts
